# kaggle-api

./: .gitignore  .swagger-codegen-ignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  KaggleSwagger.yaml  KaggleSwaggerConfig.json  LICENSE  LICENSE.txt  MANIFEST.in  README-backup.md  README.md  Rmarkdown  SECURITY.md  Titanic. Py  aider_modify_repo.py  blank.ipynb  contributors_log.txt  install  kaggle.ipynb  kernel-metadata.json  markbook  monkeytype.sqlite3  pyproject.toml  requirements.in  requirements.txt  setup.py  test  testing.ipynb
.gemini/: docs-prompt.txt  python.md  setings.json
.github/workflows/: no-response.yaml  pythonpackage.yml  test_gpu.yaml
docs/: ApiBlobType.md  Collaborator.md  CreateInboxFileRequest.md  DatasetColumn.md  DatasetNewRequest.md  DatasetNewVersionRequest.md  DatasetUpdateSettingsRequest.md  Error.md  KaggleApi.md  KernelPushRequest.md  License.md  ModelInstanceNewVersionRequest.md  ModelInstanceUpdateRequest.md  ModelNewInstanceRequest.md  ModelNewRequest.md  ModelUpdateRequest.md  README.md  Result.md  StartBlobUploadRequest.md  StartBlobUploadResponse.md  UploadFile.md  competitions.md  conf.py  configuration.md  datasets.md  datasets_metadata.md  index.rst  kernels.md  kernels_metadata.md  model_card.md  modelinstance_usage.md  models.md  models_metadata.md  tutorials.md
documentation/: Makefile  README.md  competitions.md  conf.py  configuration.md  datasets.md  doc-prompt.md  index.md  index.rst  intro.md  kernels.md  model_instance_variations.md  model_instances.md  model_instances_versions.md  models.md  models_instances.md  models_instances_versions.md  other_commands.md  tutorials.md
documentation/_build/doctrees/: competitions.doctree  configuration.doctree  datasets.doctree  environment.pickle  index.doctree  intro.doctree  kernels.doctree  model_instances.doctree  model_instances_versions.doctree  models.doctree  tutorials.doctree
documentation/_build/html/: .buildinfo  competitions.html  configuration.html  datasets.html  genindex.html  index.html  intro.html  kernels.html  model_instances.html  model_instances_versions.html  models.html  objects.inv  search.html  searchindex.js  tutorials.html
documentation/_build/html/_sources/: competitions.md.txt  intro.md.txt  models.md.txt
documentation/source/: kaggle.api.rst  kaggle.models.rst  kaggle.rst  modules.rst
integration_tests/: test_models.py
kaggle/: __init__.py  __main__.py  api_client.py  cli.py  configuration.py  rest.py
kaggle/api/: __init__.py  kaggle_api.py  kaggle_api_extended.py
kaggle/models/: __init__.py  api_blob_type.py  collaborator.py  create_inbox_file_request.py  dataset_column.py  dataset_new_request.py  dataset_new_version_request.py  dataset_update_settings_request.py  dataset_upload_file.py  error.py  file.py  kaggle_models_extended.py  kernel_push_request.py  license.py  model_instance_new_version_request.py  model_instance_update_request.py  model_new_instance_request.py  model_new_request.py  model_update_request.py  result.py  start_blob_upload_request.py  start_blob_upload_response.py  upload_file.py
kaggle/test/: __init__.py  test_authenticate.py
kaggle/tests/: __init__.py  test_authenticate.py
kagglesdk/: kaggle_client.py  kaggle_env.py  kaggle_http_client.py  kaggle_object.py
kagglesdk-orig/: __init__.py  kaggle_http_client.py  kaggle_object.py
kagglesdk-orig/competitions/types/: competition_api_service.py
kagglesdk-orig/models/types/: model_api_service.py  model_service.py
kagglesdk/admin/types/: inbox_file_service.py
kagglesdk/blobs/types/: blob_api_service.py
kagglesdk/common/types/: file_download.py  http_redirect.py
kagglesdk/competitions/services/: competition_api_service.py
kagglesdk/competitions/types/: competition_api_service.py  competition_enums.py  submission_status.py
kagglesdk/datasets/types/: dataset_api_service.py  dataset_enums.py  dataset_types.py
kagglesdk/education/types/: education_api_service.py  education_service.py
kagglesdk/kernels/services/: kernels_api_service.py
kagglesdk/kernels/types/: kernels_api_service.py  kernels_enums.py
kagglesdk/models/services/: model_api_service.py
kagglesdk/models/types/: model_api_service.py  model_enums.py  model_types.py
kagglesdk/security/services/: oauth_service.py
kagglesdk/security/types/: oauth_service.py
kagglesdk/test/: test_client.py
kagglesdk/users/services/: account_service.py
kagglesdk/users/types/: users_enums.py
ksdk-orig/: kaggle_http_client.py
ksdk-orig/datasets/types/: dataset_enums.py  dataset_types.py
prompts/: quick.md
src/: CONTRIBUTING.md  KaggleSwagger.yaml  KaggleSwaggerConfig.json  LICENSE  __init__.py  oauth_demo.py  requirements.txt  setup.cfg  setup.py
src/kaggle/: __init__.py  cli.py  configuration.py
src/kaggle/api/: kaggle_api.py  kaggle_api_extended.py
src/kaggle/models/: api_blob_type.py  dataset_column.py  dataset_new_request.py  dataset_new_version_request.py  dataset_update_settings_request.py  kaggle_models_extended.py  kernel_push_request.py  model_instance_new_version_request.py  model_instance_update_request.py  model_new_instance_request.py  model_new_request.py  model_update_request.py  start_blob_upload_request.py  start_blob_upload_response.py  upload_file.py
src/kaggle/test/: test_authenticate.py
src/kagglesdk/: LICENSE  __init__.py  kaggle_client.py  kaggle_creds.py  kaggle_env.py  kaggle_http_client.py  kaggle_oauth.py  kaggle_object.py
src/kagglesdk/test/: test_client.py
src/ksdk/: kaggle_client.py  kaggle_env.py
test/: test_error.py  test_kaggle_api.py  test_result.py
tests/: kaggle  kagglesdk  python_api_tests.py  test_commands.sh  test_parser.py  unit_tests.py
tests/dataset/: dataset-metadata.json
tests/kernel/: kernel-metadata.json  testing.ipynb
tests/model/: model-metadata.json
tests/model/instance/: data.csv  model-instance-metadata.json
tools/: GeneratePythonLibrary.sh  use-localhost.sh  use-prod.sh
tools/cicd/: integration-tests.yaml
tools/releases/: Dockerfile  cloudbuild.yaml  requirements.in  requirements.txt
(+86 files in other folders)
