[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "kaggle"
dynamic = [
    "version",
]
description = "Access Kaggle resources anywhere"
authors = [
    { name = "Kaggle", email = "support@kaggle.com" },
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["Kaggle", "API"]
requires-python = ">=3.7"
dependencies = [
    "bleach",
#    "certifi>=14.05.14",
#    "charset-normalizer",
#    "idna",
#    "python-dateutil>=2.5.3",
    "python-slugify",
    "requests",
    "setuptools>=21.0.0", # unused if setup.py is removed
    "six>=1.10", # should be unused but is still imported
#    "text-unidecode",
    "tqdm",
    "urllib3>=1.15.1",
#    "webencodings",
    "protobuf",
    "black>=24.10.0",
    "mypy>=1.15.0",
    # Pre-install `types-*` packages to speed up lint:typing command.
    "types-requests",
    "types-tqdm",
]

[project.scripts]
kaggle = "kaggle.cli:main"

[project.urls]
Homepage = "https://github.com/Kaggle/kaggle-api"
Issues = "https://github.com/Kaggle/kaggle-api/issues"

[tool.hatch.version]
path = "src/__init__.py"
# TODO: Remove validate-bump = false for next stable release
validate-bump = false

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle", "src/kagglesdk"]

[tool.hatch.envs.default.scripts]
install-unzip = """sudo apt-get install -y unzip || echo 'unzip could not be installed'"""
# TODO: install in Mac/Windows
install-black = """pip3 install black --break-system-packages || echo 'black could not be installed'"""
install-toml = """sudo apt-get install -y python3-toml || echo 'toml could not be installed'"""
install-deps = "hatch run install-unzip && hatch run install-black && hatch run install-toml"

integration-test = "pytest {args:integration_tests}"

compile = "./tools/GeneratePythonLibrary.sh"
install = "./tools/GeneratePythonLibrary.sh --install"
watch = "./tools/GeneratePythonLibrary.sh --watch"
test = "./tools/GeneratePythonLibrary.sh --test local"

[tool.docformatter]
recursive = true

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.mypy]
strict = false
show_error_codes = true
follow_imports = 'silent'
exclude = '''(?x)(
    /src/
)'''
python_version = 3.11

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
#strict_equality = true
#strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
#check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
#disallow_subclassing_any = true
#disallow_untyped_decorators = true
#disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true
