[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "kaggle"
dynamic = [
    "version",
]
description = "Access Kaggle resources anywhere"
authors = [
    { name = "Kaggle", email = "support@kaggle.com" },
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["Kaggle", "API"]
requires-python = ">= 3.11"
dependencies = [
    "bleach",
    "kagglesdk >= 0.1.15, < 1.0", # sync with kagglehub
    "python-slugify",
    "requests",
    "python-dateutil",
    "tqdm",
    "urllib3 >= 1.15.1",
    "packaging",
    "protobuf",
]

[project.scripts]
kaggle = "kaggle.cli:main"

[project.urls]
Homepage = "https://github.com/Kaggle/kaggle-api"
Issues = "https://github.com/Kaggle/kaggle-api/issues"

[tool.hatch.version]
path = "src/kaggle/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle"]

[tool.hatch.envs.test]
dependencies = [
    "pytest"
]

[tool.hatch.envs.test.scripts]
local = "source tools/use-localhost.sh; cd tests; python unit_tests.py --failfast"
prod = "source tools/use-prod.sh; cd tests; python unit_tests.py --failfast"
integration = "pytest integration_tests"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black >= 24.10.0",
    "mypy >= 1.15.0",
    # Pre-install `types-*` packages to speed up lint:typing command.
    "types-requests",
    "types-tqdm",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/kagglehub tests}"
style = [
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.docformatter]
recursive = true

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
strict = false
show_error_codes = true
follow_imports = 'silent'
exclude = '''(?x)(
    /src/
)'''
python_version = 3.11

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
extra_checks = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_incomplete_defs = true
# TODO Enable these after GA.
#disallow_untyped_calls = true # 167 errors reported a/o April 30, 2025
#disallow_untyped_defs = true # 132

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true # 50

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true
